[package]
name = "steinbockschraubtermine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.0", default-features = false, features = ["rustls-tls", "charset", "http2"] }
table-extract = "0.2.3"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
ics = "0.5.8"
rocket = "0.5.1"
anyhow = "1.0.97"
log = "0.4.26"